--- a/Com.Ericmas001.Mvvm.Demo/MainWindow.xaml
+++ b/Com.Ericmas001.Mvvm.Demo/MainWindow.xaml
@@ -1,4 +1,5 @@
-﻿<Window x:Class="Com.Ericmas001.Mvvm.Demo.MainWindow"
+﻿<!-- ReSharper disable Xaml.BindingWithContextNotResolved -->
+<Window x:Class="Com.Ericmas001.Mvvm.Demo.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
